--- a/src/pages/reciept/index.css
+++ b/src/pages/reciept/index.css
@@ -17,7 +17,6 @@
     margin: 10px;
 }
 .Paytext1 {
-    align-items: center;
     display: flex;
     flex-direction: column;
     left: 501px;
@@ -212,3 +211,42 @@
     position: absolute;
     font-size: 1.5rem;
   }
+
+  
+@media (max-width: 768px) {
+  .form-back{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+   
+  }
+  
+}
+
+@media (max-width: 992px) {
+  .form-back{
+    border-radius: 10px;
+    border:  2px solid #333333;
+    position: relative;
+    width: 20rem;
+    height: 20rem;
+    background-color: white;
+    z-index: 18;
+    margin-top: 15rem;
+    margin-left: 10rem;
+   
+  }
+}
+
+@media (max-width: 1400px) {
+  .form-back{
+    border-radius: 10px;
+    
+    width: 20rem;
+    height: 20rem;
+   
+   
+   
+  }
+  
+}
