--- a/src/pages/reciept/index.css
+++ b/src/pages/reciept/index.css
@@ -19,7 +19,8 @@
 .Paytext1 {
     display: flex;
     flex-direction: column;
-    left: 501px;
+    left: 600px;
+    
     min-height: 94px;
     position: fixed;
     top: 11px;
@@ -44,12 +45,12 @@
   }
   .BackGround{
     position: absolute;
-      margin-top: 20px;
-      margin-left: 10px;
-      width: 139px;
-      background-color:#333333;
-      height: 40rem;
-      border-radius: 10px;
+    margin-top: 20px;
+    margin-left: 10px;
+    width: 139px;
+    background-color:#333333;
+    height: 40rem;
+      
   }
   .StatusTick {
     display: flex;
@@ -59,8 +60,10 @@
     margin-left: 35px;
   }
   .vector {
-    height: 40px;
-    width: 40px;
+    height: 50px;
+    width: 50px;
+    margin-top: -10px;
+    margin-left: -6px;
   }
   .article-list {
    margin-top: 11rem;
@@ -95,17 +98,16 @@
  .remove-tag {
      margin-left: -1.8rem;
  }
- .pay-list{
+ .recipt{
      color: #ffff;
-     margin-left: 3.5rem;
+     margin-left: 3rem;
  }
   .back-design {
     align-items: center;
-    margin-top: 20px;
+    margin-top: 11px;
     min-width: 1500px;
-    margin-left: 22.5rem;
+    margin-left: 9.9rem;
     margin-bottom: 30rem;
-    /* border-radius: 10px; */
     background-color:#FEB23B;
     border-bottom-right-radius: 700%;
     border-bottom-left-radius: 500%;
@@ -117,7 +119,7 @@
 
   .down-design {
     margin-top: -1.6rem;
-    margin-left: 138px;
+    margin-left: 139px;
     height: 120px;
     width: 1288px;
   }
@@ -130,14 +132,18 @@
   .form-back{
     border-radius: 10px;
     border:  2px solid #333333;
-    position: relative;
+    /* position: relative; */
     width: 20rem;
     height: 20rem;
     background-color: white;
-    z-index: 18;
+    /* z-index: 18; */
     margin-top: 15rem;
-    margin-left: 10rem;
+    margin-left: 11rem;
    
+  }
+  .cardmain :hover{
+    background-color: #FEB23B;
+
   }
   .p1{
       margin-left: 13rem;
@@ -145,12 +151,12 @@
   .form-back h1{
       margin-top: 15rem;
       margin-left: 3rem;
-      position: absolute;
+      /* position: absolute; */
       font-size: 1.5rem;
   }
-  .group-197 {
+  .png-all {
     border:  2px solid #333333;
-    position: absolute;
+    /* position: absolute; */
     margin-top: 1rem;
     margin-left: 5rem;
     align-items: flex-start;
@@ -164,89 +170,40 @@
     z-index: 25;
   }
   
-  .x35-351793_credit-or {
+  .digital-img{
     align-self: center;
-    height: 36px;
-    margin-right: 2px;
-    width: 59px;
+    height: 80px;
   }
-  
-  .flex-row {
-    align-items: flex-start;
-    display: flex;
-    margin-top: 7px;
-    min-width: 127px;
+  .text1 h1{
+    align-items: center;
+    margin-left: 5rem;
   }
-  
-  .x35-351793_credit-or-1 {
-    height: 36px;
-    width: 59px;
-  }
-  
-  .group-40 {
-    height: 36px;
-    margin-left: 9px;
-    width: 59px;
-  }
-
-  .gift-card-img{
+  .print-reciept {
+    width: 70px;
     align-self: center;
-    margin-top: 20px;
   }
-  .wallet-img{
+  .text2 h3{
+    align-items: center;
+    margin-left: 5.4rem;
+  }
+  .text3 h2{
+    align-items: center;
+    margin-left: 2.9rem;
+  }
+  .no-reciept{
     align-self: center;
-    margin-top: 15px;
-    height: 70px;
-    width: 80px;
+    width: 85px;
   }
-  .form-back h2{
-    margin-top: 15rem;
-    margin-left: 7.5rem;
-    position: absolute;
-    font-size: 1.5rem;
-  }
-  .form-back h3{
-    margin-top: 15rem;
-    margin-left: 6.5rem;
-    position: absolute;
-    font-size: 1.5rem;
-  }
-
-  
 @media (max-width: 768px) {
-  .form-back{
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-   
-  }
+ 
   
 }
 
 @media (max-width: 992px) {
-  .form-back{
-    border-radius: 10px;
-    border:  2px solid #333333;
-    position: relative;
-    width: 20rem;
-    height: 20rem;
-    background-color: white;
-    z-index: 18;
-    margin-top: 15rem;
-    margin-left: 10rem;
-   
-  }
+  
 }
 
 @media (max-width: 1400px) {
-  .form-back{
-    border-radius: 10px;
-    
-    width: 20rem;
-    height: 20rem;
-   
-   
-   
-  }
+ 
   
 }
