--- a/src/pages/security_tag/security.css
+++ b/src/pages/security_tag/security.css
@@ -1,8 +1,10 @@
+
+/* REmove Tag Heading */
 .stop{
     margin-top: 2%;
     margin-left: 44%;
 }
-
+/* REmove Tag Heading */
 .shead span{
     margin-top: 3%;
     margin-left: 38%;
@@ -15,8 +17,8 @@
 .scontainer{
     display: flex;
     margin-top: 10%;
-    margin-left: 11.7%;
-    width: 88.3%;
+    margin-left: 11.01%;
+    width: 88.89%;
     height: 350px;
     border-top: 6px solid yellow;
     border-bottom: 6px solid yellow;
@@ -56,49 +58,103 @@
     opacity: 0.7;
     border-top-left-radius: 50%;
     border-bottom-left-radius: 50%;
-    height: 340px;
+    height: 320px;
     position: absolute;
     z-index: 3;
-    margin-left: 46.3rem;
+    margin-top: 0.5rem;
+    margin-left: 48.3rem;
 }
 .stag{
     width: 15%;
-    margin-left: 60%;
     height: 40%;
-    margin-left: 35rem;
+    margin-left: 39rem;
     z-index: 8;
     margin-top: 6rem ;
     border-radius: 100%;
 }
 .stag2{
-     margin-left: 50%;
-     z-index: 8;
-     margin-top: 3rem ;
-     border-radius: 100%;
+    margin-left: 50%;
+    z-index: 8;
+    margin-top: 3rem ;
+    border-radius: 100%;
 }
 
 
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     .scontainer{
         margin-top: 10%;
-        margin-left: 22%;
-        width: 65%;
+        margin-left: 15.6%;
+        width: 54.29%;
         height: 400px;
-        border-top: 6px solid yellow;
-        border-bottom: 6px solid yellow;
-        position: absolute;
-        z-index: 18;
-        background-color: #F9F9AC;
     
     }
     .sitems{
         margin-left: 2px;
         margin-top: 2px;
     }
+    .sbg{
+        opacity: 0.7;
+        height: 240px;
+        margin-left: 48rem;
+    }
+    .stop{
+        margin-left: 39%;
+    }
+    .shead span{
+        margin-top: 2%;
+        margin-left: 29%;
+        font-size: 24px;
+      
+    }
   }
   
-  @media (max-width: 992px) {
+  @media screen and (max-width: 992px) {
+    .stop{
+        margin-top: 2px;
+        margin-left: 37%;
+    }
+    .shead span{
+        margin-top: 5%;
+        margin-left: 27%;
+        position: absolute;
+        z-index: 18;
+        font-size: 30px;
+        font-weight: 600;
+      
+    }
+    .scontainer{
+        margin-top: 10%;
+        margin-left: 13.2%;
+        width: 86.69%;
+        height: 385px;
     
+    }
+    .scontainersuccess{
+        margin-top: 10%;
+        margin-left: 14.4%;
+        width: 85.39%;
+        height: 400px;
+    }
+    .sbg{
+        opacity: 0.7;
+        height: 233px;
+        margin-left: 37rem;
+        margin-top: 5rem;
+    }
+    .sbgsuccess{
+        height: 304px;
+        margin-left: 31.2rem;
+        margin-top: 2rem;
+    }
+    .stag{
+        width: 15%;
+        margin-left: 24rem;
+        height: 40%;
+        margin-top: 7rem ;
+    }
+    .stag2{
+        margin-left: 29%;
+    }
   }
   
   @media (max-width: 1400px) {
