--- a/src/pages/checkout/index.scss
+++ b/src/pages/checkout/index.scss
@@ -42,14 +42,19 @@ main .container-fluid{
 	border-bottom: 1px solid #ccc;
 	padding: 15px 0;
 }
-.content-section .fixed-bottom{
-	position: sticky;
-	background-color: #f1f1f1;
-	padding: 14px 0;
+.content-section .fixed-bottom {
+    position: fixed;
+    background-color: #f1f1f1;
+    padding: 14px 0;
+    bottom: 0px;
+    left: 9.4rem;
 }
-.content-section{
-	display: none;
+.article-list-wrapper .product-list-main{
+	padding: 1rem 2rem ;
+	border-bottom: 1px solid #BBBBBB;
+	margin-left:2rem;
 }
+
 .content-section.is-current{
 	display: block;
 }
@@ -96,46 +101,6 @@ main .container-fluid{
     padding: 3px 15px;
     text-transform: capitalize;
 }
-.left-nav{
-	color: #fff;
-}
-.mz-step-indicator span{
-	width: 30px;
-    height: 30px;
-    display: inline-block;
-    padding: 2px;
-    border: 2px solid #fff;
-    border-radius: 50%;
-    font-weight: 600;
-}
-.nav-header {
-    padding: 0 10px 50px;
-    position: relative;
-}
-.nav-header:after{
-	content: "";
-	width: 2px;
-	height: 40px;
-	border-radius: 2px;
-	background-color: #fff;
-	position: absolute;
-}
-.nav-header:last-child:after{
-	display: none;
-}
-.nav-header.is-current .mz-step-indicator span{
-	background: #ffd100;
-    border-color: #ffd100;
-    color: #000;
-}
-.nav-header.is-complete .mz-step-indicator span{
-	background: #75ae52;
-    border-color: #75ae52;
-    color: #fff;
-}
-.nav-header>div{
-	margin: 8px 0;
-}
 .card-images img{
 	max-width: 50px;
 }
@@ -174,21 +139,5 @@ main .container-fluid{
 	header h1{
 		font-size: 24px;
 	}
-	.nav-header {
-	    display: inline-block;
-	    max-width: 150px;
-	    max-height: 160px;
-	    width: 100%;
-	    vertical-align: middle;
-    	padding: 5px 10px;
-	}
-	.nav-header:after {
-	    content: "";
-	    width: 20px;
-	    height: 2px;
-	    border-radius: 2px;
-	    position: absolute;
-	    right: -8px;
-	    top: 50%;
-	}	
+	
 }
