--- a/src/pages/select-payment-mode/index.scss
+++ b/src/pages/select-payment-mode/index.scss
@@ -1,8 +1,7 @@
 .payment-nav {
-  position: sticky;
-  top: 0;
   background-color: #fff;
   z-index: 2;
+  position: relative;
 
   .container-fluid {
     justify-content: space-between;
@@ -17,6 +16,21 @@
     box-shadow: 2px 2px 2px 1px #5e5e5e66;
     color: #fff;
   }
+  img {
+    width: 150px;
+}
+}
+.main-payment {
+  width: 89%;
+  position: absolute;
+  right: 0;
+  top: 0;
+}
+.main-payment-box {
+  width: 89%;
+  position: absolute;
+  right: 0;
+  top: 4rem;
 }
 .payment-detils{
   a {
@@ -38,14 +52,22 @@
   height: 148px;
   margin-top: 6rem;
 }
+.payment-box-main {
+  background-image: url("../../assets/images/payment-mode/base-vector.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 148px;
+  margin-top: 11rem;
+}
 
 .payment-details-box {
   position: absolute;
   height: 350px;
-  top: 26rem;
+  top: 17rem;
   align-items: center;
   justify-content: space-between !important;
   width: 88%;
+  left: 5rem;
 }
 
 // Payment-details
@@ -56,7 +78,7 @@
   border: 3px solid #909090;
   border-radius: 10px;
   position: relative;
-  bottom: 9rem;
+  bottom: 11rem;
   &:hover{
     background-color: #feb438;
     color: #fff;
@@ -88,7 +110,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 148px;
-  margin-top: 0rem;
+  margin-top: -7.8rem;
 }
 
 // Gift Voucher
@@ -136,6 +158,7 @@
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
+  position: relative;
 }
 .payment-details-box{
   .sucessful-scan {
@@ -154,7 +177,7 @@
   .sucess-box {
     background: linear-gradient(45deg, #ffaf13, #ffd065);
     height: 300px;
-    margin: 0 1rem;
+    margin: 0 2rem;
     border: 3px solid #fff;
     border-radius: 10px;
 
@@ -168,6 +191,7 @@
   }
 
   .sucess-message {
+    position: relative;
     .sucess-icon {
       background-color: #77b048;
       border: 2px solid #fff;
@@ -175,8 +199,9 @@
       width: 70px;
       height: 70px;
       position: absolute;
-      left: 50%;
-      bottom: 5.5rem;
+      left: 45%;
+      top: -2rem;
+  
       svg {
         width: 40px;
         height: 40px;
@@ -199,6 +224,10 @@
   
 }
 @media only screen and (max-width: 768px) {
+
+  .main-payment {
+    width: 100%;
+}
   .payment-nav {
     position: static;
 
@@ -211,12 +240,15 @@
     }
   }
   .payment-details-box {
-    top: 31rem;
+    top: 21rem;
     left: 3rem;
   }
   .credit-cards {
     margin-top: 1rem;
     
+  }
+  .main-payment-box{
+    width: 100%;
   }
 
   // payment sucess
@@ -254,7 +286,7 @@
   }
 
   .payment-details-box {
-    top: 25rem;
+    top: 15rem;
     left: 13rem;
     display: block !important;
     width: 45%;
@@ -286,6 +318,7 @@
 
   .payment-details-box {
     left: 8rem !important;
+    top: 8rem;
   }
 
   .payment-sucess-main {
@@ -302,7 +335,7 @@
   }
 
   .payment-details-box {
-    left: 6rem !important;
+    left: 4rem !important;
   }
 
   .payment-sucess-main {
