--- a/src/pages/payment-success/index.css
+++ b/src/pages/payment-success/index.css
@@ -79,6 +79,10 @@
      color: #ffff;
      margin-left: 3.5rem;
  }
+ .pay-list-receipt{
+    color: #ffff;
+    margin-left: 3rem;
+ }
  .subtract{
     box-sizing: border-box;
     position: absolute;
@@ -156,7 +160,7 @@
     width: 303px;
     height: 49px;
     left: 6px;
-    top: 345px;
+    top: 304px;
     font-family: 'Barlow';
     font-style: normal;
     font-weight: 600;
@@ -169,7 +173,7 @@
     width: 83px;
     height: 48px;
     left: 545px;
-    top: 344px;
+    top: 304px;
     font-family: 'Work Sans';
     font-style: normal;
     font-weight: 600;
@@ -182,11 +186,55 @@
     width: 116px;
     height: 49px;
     left: 1082px;
-    top: 338px;
+    top: 304px;
     font-family: 'Barlow';
     font-style: normal;
     font-weight: 700;
     font-size: 40.8351px;
     line-height: 49px;
     color: #333333;
+ }
+ .check-mark-verified{
+     animation: subodh 0.5s infinite;
+    box-sizing: border-box;
+    position: absolute;
+    left: 46.58%;
+    right: 38.26%;
+    top: 93.44%;
+    bottom: 37.5%;
+    border: 3px solid #FFFFFF;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+    border-radius: 51.5px;
+ }
+ @keyframes subodh{
+     from{
+         transform: scale(1);
+         opacity: 1;
+     }
+     50%{
+         transform: scale(0.75);
+         opacity: 0.25;
+     }
+     to{
+         transform: scale(1);
+         opacity: 1;
+     }
+
+ }
+ .YourPaymentwasSuccessful{
+    position: absolute;
+    width: 410px;
+    height: 37px;
+    left: 1057px;
+    top: 530px;
+    
+    font-family: 'Barlow';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 30.9405px;
+    line-height: 37px;
+    
+    color: #00C704;
+    
+    text-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
  }
