--- a/src/pages/select-payment-mode/index.scss
+++ b/src/pages/select-payment-mode/index.scss
@@ -1,7 +1,8 @@
 .payment-nav {
   background-color: #fff;
   z-index: 2;
-  position: relative;
+  position: sticky;
+  top: 0;
 
   .container-fluid {
     justify-content: space-between;
@@ -18,13 +19,17 @@
   }
   img {
     width: 150px;
+  }
 }
+.payment-detils {
+  position: relative;
+  bottom: 0rem;
 }
 .main-payment {
-  width: 89%;
-  position: absolute;
+  width: 89% !important;
+  position: fixed;
   right: 0;
-  top: 0;
+  top: -7rem;
 }
 .main-payment-box {
   width: 89%;
@@ -32,7 +37,7 @@
   right: 0;
   top: 4rem;
 }
-.payment-detils{
+.payment-detils {
   a {
     text-decoration: none;
     color: #303030;
@@ -57,15 +62,31 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 148px;
-  margin-top: 11rem;
+  margin-top: 5rem;
+}
+.payment-box-main-wallet {
+  background-image: url("../../assets/images/payment-mode/base-vector.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  height: 148px;
+  margin-top: 5rem;
 }
 
 .payment-details-box {
   position: absolute;
   height: 350px;
-  top: 17rem;
+  top: -12rem;
   align-items: center;
-  justify-content: space-between !important;
+  justify-content: space-between;
+  width: 88%;
+  left: 5rem;
+}
+.payment-details-box-main {
+  position: absolute;
+  height: 350px;
+  top: -7rem;
+  align-items: center;
+  justify-content: space-between ;
   width: 88%;
   left: 5rem;
 }
@@ -79,11 +100,10 @@
   border-radius: 10px;
   position: relative;
   bottom: 11rem;
-  &:hover{
+  &:hover {
     background-color: #feb438;
     color: #fff;
   }
- 
 
   .payment-icons {
     width: 150px;
@@ -110,7 +130,7 @@
   background-size: cover;
   background-repeat: no-repeat;
   height: 148px;
-  margin-top: -7.8rem;
+  margin-top: -13.8rem;
 }
 
 // Gift Voucher
@@ -152,27 +172,48 @@
     justify-content: center;
   }
 }
+.sucessful-scan {
+  width: 300px;
+}
 
 // Payment sucess
 .payment-nav {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  position: relative;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 3;
 }
-.payment-details-box{
+.payment-nav-main {
+  justify-content: space-between;
+  align-items: center;
+  padding: 19px;
+  position: fixed;
+  width: 100%;
+  top: 0;
+  z-index: 5;
+  background-color: #fff;
+
+  img{
+    width: 150px;
+  }
+}
+.payment-details-box-main {
   .sucessful-scan {
-    height: 400px;
-}
+    height: 400px ;
+  }
 }
 
 .payment-sucess-main {
   background-image: url(../../assets/images/transactions/Vector7.png);
   background-size: cover;
   background-repeat: no-repeat;
-  height: 770px;
   background-color: #e5e5e5;
   padding: 5rem 0 0;
+    height: 88.5vh !important;
+
 
   .sucess-box {
     background: linear-gradient(45deg, #ffaf13, #ffd065);
@@ -189,6 +230,8 @@
       width: 20%;
     }
   }
+  
+
 
   .sucess-message {
     position: relative;
@@ -201,7 +244,7 @@
       position: absolute;
       left: 45%;
       top: -2rem;
-  
+
       svg {
         width: 40px;
         height: 40px;
@@ -213,72 +256,186 @@
       text-align: right;
       padding: 10px 5rem;
       color: #00c704;
-  }
+    }
   }
 }
 
-@media only screen and (max-width:1230px) {
+@media only screen and (max-width: 1980px) {
+  .main-payment {
+    width: 93% !important;
+  }
+  .payment-deatil-box {
+    margin-top: -5.1rem;
+}
+.payment-box-main {
+  margin-top: 13.7rem;
+}
+.payment-box-main-wallet {
+  margin-top: 13.7rem;
+}
+  .main-payment-box {
+    width: 93%;
+}
+  .payment-sucess-main {
+    height: 92vh;
+  }
+}
+
+@media only screen and (max-width: 1230px) {
   .payment-sucess-main .sucess-message .sucess-icon {
     bottom: -4.5rem;
+  }
 }
-  
+
+@media  only screen and (max-width:1024px) {
+  .payment-nav {
+    position: relative;
+}
+  .left-nav {
+    height: 90.5vh;
+}
+.payment-deatil-box {
+  margin-top: -10rem;
+}
+.payment-detils {
+  bottom: 1rem;
+}
+.payment-box-main {
+  margin-top: 8.8rem;
+}
+.payment-details-box {
+  top: -13rem;
+  left: 6rem;
+}
+.payment-box-main-wallet {
+  margin-top: 8.8rem;
+}
+.main-payment {
+  width: 86% !important;
+  position: absolute;
+  top: 0;
+  right: 0;
+}
+.digital-wallet {
+  height: 260px;
+  width: 170px;
+  li img{
+    width: 100px;
+  }
+}
+.credit-cards h3 {
+  padding: 1rem 0 0;
+}
+.sucessful-scan {
+  width: 320px;
+}
+.payment-nav-main {
+  position: relative;
+}
+.payment-nav-main {
+  position: relative;
+  text-align: center;
+  display: block !important;
+  h3{
+    padding: 1rem;
+  }
+}
+.payment-sucess-main {
+  height: 149.5vh !important;
+}
+}
+
+@media only screen and (max-width:992px){
+  .payment-sucess-main {
+    height: 146vh !important;
+}
+.main-payment {
+  width: 85% !important;
+}
+.payment-detils {
+  bottom: 5rem;
+}
+.payment-box-main {
+  margin-top: 5.4rem;
+}
+.payment-details-box {
+  top: -13rem;
+  left: 4rem;
+}
+.payment-deatil-box {
+  margin-top: -13.4rem !important;
+}
+.payment-sucess-main {
+  height: 86vh !important;
+}
+.payment-box-main-wallet {
+  margin-top: 5.3rem;
+}
 }
 @media only screen and (max-width: 768px) {
-
   .main-payment {
-    width: 100%;
-}
-  .payment-nav {
-    position: static;
-
+    width: 100% !important;
+  }
+  .payment-nav{
     .container-fluid {
-      display: block !important;
       text-align: center;
-    }
+      padding: 10px;
+      display: block !important;
+  }
+  
+
     h3 {
       padding: 1rem 0;
     }
   }
+  .payment-nav {
+    display: block !important;
+    text-align: center;
+}
   .payment-details-box {
-    top: 21rem;
+    top: -9rem;
     left: 3rem;
-  }
+}
   .credit-cards {
     margin-top: 1rem;
-    
   }
-  .main-payment-box{
-    width: 100%;
+  .main-payment-box {
+    width: 100% ;
   }
+  .content-section {
+    left: 0rem;
+}
+
 
   // payment sucess
   .payment-nav {
-    position: static;
-    display: block !important;
-    text-align: center;
+   
     h3 {
       padding: 1rem 0;
     }
   }
   .sucess-box {
-    height: auto !important;
+    height: auto ;
   }
 
+  // payment sucess
 
-// payment sucess
-
-.payment-sucess-main {
-  .sucess-message {
-    .sucess-icon {
-      bottom: -12rem;
-      left: 43%;
-    }
-    h3{
-      text-align: center;
-      padding: 3rem 0;
+  .payment-sucess-main {
+    .sucess-message {
+      .sucess-icon {
+        bottom: -12rem;
+        left: 43%;
+      }
+      h3 {
+        text-align: center;
+        padding: 3rem 0;
+      }
     }
   }
+  .main-payment-box {
+    width: 100%;
 }
+
 }
 @media only screen and (max-width: 650px) {
   .payment-box {
@@ -286,48 +443,72 @@
   }
 
   .payment-details-box {
-    top: 15rem;
+    top: -14rem;
     left: 13rem;
     display: block !important;
     width: 45%;
     text-align: center;
-  }
+}
   .gift-icon {
     height: 200px;
     width: 180px;
   }
-
-  .payment-sucess-main {
-    height: 900px;
+  .payment-box-main {
+    margin-top: 28.8rem;
+}
+.main-payment-box{
+  width: 100% !important;
+}
+.payment-sucess-main {
+  height: 122.5vh !important;
+}
+.payment-box-main-wallet {
+  margin-top: 28.8rem;
+}
+.payment-sucess-main .sucess-box {
+  height: auto;
+  margin-top: 2rem;
 }
 
-  .payment-sucess-main{
+
+  // .payment-sucess-main {
+  //   height: 900px;
+  // }
+
+  .payment-sucess-main {
     .sucess-message {
       .sucess-icon {
         bottom: -37rem;
         left: 43%;
-    }
+      }
     }
   }
 }
 
-@media only screen and (max-width: 425px) {
+@media only screen and (max-width: 426px) {
   .payment-box {
     margin-top: 18rem;
   }
 
-  .payment-details-box {
-    left: 8rem !important;
-    top: 8rem;
-  }
+  
 
   .payment-sucess-main {
     .sucess-message {
       .sucess-icon {
         bottom: -35rem;
-    }
+      }
     }
   }
+  .payment-box-main {
+    margin-top: 22rem ;
+}
+.payment-details-box {
+  top: -10rem ;
+  left: 8rem;
+}
+.payment-box-main-wallet {
+  margin-top: 23rem;
+}
 }
 @media only screen and (max-width: 320px) {
   .payment-box {
@@ -335,7 +516,7 @@
   }
 
   .payment-details-box {
-    left: 4rem !important;
+    left: 4rem ;
   }
 
   .payment-sucess-main {
@@ -343,7 +524,7 @@
       .sucess-icon {
         bottom: -33rem;
         left: 40%;
-    }
+      }
     }
   }
 }
