--- a/src/pages/drop-your-item/index.scss
+++ b/src/pages/drop-your-item/index.scss
@@ -19,6 +19,17 @@
     margin-bottom: 15px;
   }
 }
+.items-main img {
+  width: 80%;
+  height: 480px;
+}
+
+@media only screen and (max-width:1440px) {
+  .item-main {
+    height: 100vh;
+}
+  
+}
 
 @media (max-width: '968px') {
   .drop-item-main {
@@ -27,7 +38,37 @@
 }
 
 @media (max-width: '1024px') {
-  .drop-item-main {
-    background-size: 59rem;
+  .item-main {
+    height: 100vh;
 }
+  .drop-item-main {
+    background-size: 77rem;
+     .cart-main {
+      position: relative;
+      top: 7rem;
+  }
+  .cloth-main{
+    position: relative;
+      top: 7rem;
+  }
+}
+}
+@media only screen and (max-width:992px) {
+  .item-main {
+    height: 150vh;
+}
+  
+}
+
+@media only screen and (max-width:768px){
+  .items-main img {
+    width: 80%;
+    height: 290px;
+}
+}
+@media  only screen  and (max-width:580px){
+  .item-main {
+    height: 115vh;
+} 
+  
 }
