--- a/src/popup/index.scss
+++ b/src/popup/index.scss
@@ -51,6 +51,20 @@ label.form-label.col-form-label.col-sm-2 {
   font-size: 17px;
   color: #000;
 }
+
+// Logout
+.logout-main {
+   button {
+    background: #fedc00;
+    border: none;
+    padding: 10px 2rem;
+    border-radius: 8px;
+    position: absolute;
+    top: 8.5rem;
+    left: 5rem;
+}
+  }
+
 @media (min-width: 576px) {
   .col-sm-2 {
     flex: 0 0 auto;
