--- a/src/popup/index.css
+++ b/src/popup/index.css
@@ -1,4 +1,17 @@
 /* Register Open & Till Open Section */
+.modal {
+  position: fixed;
+  top: 194px;
+  left: 0;
+  z-index: 1055;
+  display: none;
+  width: 100%;
+  height: 100%;
+  overflow-x: hidden;
+  overflow-y: auto;
+  outline: 0;
+}
+
 .modal-header img {
   margin: 0 auto;
 }
